--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- YOUR CONTENT GOES HERE -->
     <div class="container">
       <h1>How will Trump's tariffs impact your building business?</h1>
-      <p>This calculator will simulate estimated added costs to your next building project when Donald Trump's tariffs on Candaian lumber and Chinese steel and aluminum are factored in.</p>
+      <p>This calculator will simulate estimated added costs to your next building project when Donald Trump's tariffs on Canadian lumber and Chinese steel and aluminum are factored in.</p>
 
       <table>
         <tr>
