--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
   <body>
     <!-- YOUR CONTENT GOES HERE -->
     <div class="container">
-      <h1>How will Trump's tariffs impact your building business?</h1>
-      <p>This calculator will simulate estimated added costs to your next building project when Donald Trump's tariffs on Canadian lumber and Chinese steel and aluminum are factored in.</p>
+      <h1>How do Trump's tariffs impact homebuilding?</h1>
+      <p>This calculator will simulate estimated added costs builders face due to Donald Trump's tariffs on Canadian lumber and Chinese steel and aluminum. Much of this is passed on to the consumer, who will pay more for a house that is no better
+        quality than it would be if the tariffs were not in place.</p>
 
       <table>
         <tr>
