--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <h1>How do Trump's tariffs impact homebuilding?</h1>
       <p>This calculator will simulate estimated added costs builders face due to Donald Trump's tariffs on Canadian lumber and Chinese steel and aluminum. Much of this is passed on to the consumer, who will pay more for a house that is no better
-        quality than it would be if the tariffs were not in place.</p>
+        quality than it would be if the tariffs were not in place. Builders who can't pass prices on to their customers face tough decisions about how they will absorb increased costs. </p>
 
       <table>
         <tr>
